# toss-invest-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  system_prompt.txt  toss_invest.py  toss_mcp_server.py
.github/workflows/: ci.yml
.omc/state/: agent-replay-4360d648-ee34-4243-8eb0-5612aa16d446.jsonl  subagent-tracking.json
docs/: MCP_SETUP.md  TROUBLESHOOTING_US_STOCKS.md
notebooks/: test_toss_invest.ipynb
tests/: test_client.py
